--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
                 <div class="navig1"> <a href="#"><strong>S'inscire</strong></a></div>
             </nav>
         </div>
-        <h2>Trouvez votre hébergement pour des vacances de reve</h2>
+        <h2>Trouvez votre hébergement pour des vacances de rêve</h2>
         <p>En plein centre ville ou en pleine nature</p>
 
     </header>
@@ -93,7 +93,7 @@
 
                     <a>
                         <div id="tab1"> <img src="./images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg" class="hebergement1"
-                                alt="Hotel du port"> <br><span class="spantab"><strong>Hotel du
+                                alt="Hôtel du port"> <br><span class="spantab"><strong>Hôtel du
                                     port</strong></span><br><span class="spantab">Nuit à partir de 46€
                             </span><br><span class="spantab1"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                     class="fas fa-star"></i><i class="fas fa-star"></i><i
@@ -103,7 +103,7 @@
 
                 <a>
                     <div id="tab1"> <img src="./images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg" class="hebergement1"
-                            alt="Hotel Les mouettes"> <br><span class="spantab"><strong>Hotel Les
+                            alt="Hôtel Les mouettes"> <br><span class="spantab"><strong>Hôtel Les
                                 mouettes</strong></span><br><span class="spantab">Nuit à partir de 46€
                         </span><br><span class="spantab1"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i><i class="fas fa-star"></i></span><span class="spantab3"><i
@@ -114,7 +114,7 @@
             <div id="container5">
                 <a>
                     <div id="tab1"> <img src="./images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" class="hebergement1"
-                            alt="Hotel de la mer"> <br><span class="spantab"><strong>Hotel de la
+                            alt="Hôtel de la mer"> <br><span class="spantab"><strong>Hôtel de la
                                 mer</strong></span><br><span class="spantab">Nuit à partir de 46€
                         </span><br><span class="spantab1"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                 class="fas fa-star"></i></span><span class="spantab3"><i class="fas fa-star"></i><i
@@ -131,8 +131,8 @@
             </a></div>
 
             <a>
-                <div id="tab1"> <img src="./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel chez Amina"
-                        class="hebergement1"> <br><span class="spantab"><strong>Hotel chez
+                <div id="tab1"> <img src="./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"
+                        class="hebergement1"> <br><span class="spantab"><strong>Hôtel chez
                             Amina</strong></span><br><span class="spantab">Nuit à partir de 46€
                     </span><br><span class="spantab1"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
                             class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></span>
@@ -149,9 +149,9 @@
                 </div>
 
                 <a></a>
-                <div id="tab2"><a> <img src="./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hotel Le soleil du matin"
+                <div id="tab2"><a> <img src="./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"
                             class="hebergement7"> <span class="spantab2">
-                            <div class="titrehotel">Hotel Le soleil du matin</div>
+                            <div class="titrehotel">Hôtel Le soleil du matin</div>
                         </span>Nuit à partir de <strong>128€</strong><br><br><br> <br><span class="spantab1"><i
                                 class="fas fa-star" aria-hidden="true"></i><i class="fas fa-star"
                                 aria-hidden="true"></i><i class="fas fa-star" aria-hidden="true"></i><i
@@ -160,7 +160,7 @@
                 <a></a>
                 <div id="tab2"><a> <img src="./images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hotes"
                             class="hebergement8"> <span class="spantab2">
-                            <div class="titrehotel">Au coeur de l'eau Chambres d'hotes</div>
+                            <div class="titrehoel">Au coeur de l'eau Chambres d'hotes</div>
                         </span>Nuit à partir de <strong>71€<br><br><br> <br></strong><span class="spantab1"><i
                                 class="fas fa-star" aria-hidden="true"></i><i class="fas fa-star"
                                 aria-hidden="true"></i><i class="fas fa-star"></i><i
@@ -168,9 +168,9 @@
                                 class="fas fa-star"></i></span></a></div>
 
                 <a></a>
-                <div id="tab2"><a> <img src="./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Tout bleu et Blanc"
+                <div id="tab2"><a> <img src="./images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel Tout bleu et Blanc"
                             class="hebergement9"> <span class="spantab2">
-                            <div class="titrehotel">Hotel Tout bleu et Blanc</div>
+                            <div class="titrehotel">Hôtel Tout bleu et Blanc</div>
                         </span>Nuit à partir de <strong>68€<br><br><br> <br></strong><span class="spantab1"><i
                                 class="fas fa-star" aria-hidden="true"></i><i class="fas fa-star"
                                 aria-hidden="true"></i><i class="fas fa-star" aria-hidden="true"></i><i
