--- a/Index.html
+++ b/Index.html
@@ -144,7 +144,7 @@
 
             </div>
             <div id="container6">
-                <div id="titrepop">
+                <div id="titlepopular">
                     <h2 id="hebcont6">Les plus populaires</h2><i class="fas fa-chart-line"></i>
                 </div>
 
